--- a/templates/other/index.html
+++ b/templates/other/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 
 
 {% block body %}
@@ -6,7 +6,7 @@
 
 
 
-
+<h1>huy</h1>
 
 
 {% endblock body %}
